[package]
name = "webtonic"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"


[dependencies]
tonic = { version = "0.3.1", default-features = false }
http = { version = "0.2.1", default-features = false }
#hyper = { version = "0.13.9", default-features = false }

wasm-bindgen = { version = "0.2.68", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.18", default-features = false }
# @TODO: remove once we can use entities without `Debug` in `log!` and `error!` on `stable` Rust.
# https://github.com/Centril/rfcs/blob/rfc/quick-debug-macro/text/0000-quick-debug-macro.md#types-which-are-not-debug
dbg = "1.0.4"
futures = { version = "0.3.6", default-features = false }

[dependencies.web-sys]
version = "0.3.45"
default-features = false
features = [
    "console",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.18", default-features = false }