[package]
name = "client-test"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.73", default-features = false, features = ["serde-serialize"] }
tonic = { version = "0.4.1", default-features = false, features = ["codegen", "prost"] }
webtonic-client = { path = "../webtonic-client" }
prost = "0.7.0"
wasm-bindgen-test = { version = "0.3.23", default-features = false }

[build-dependencies]
tonic-build = { version = "0.4.1", default-features = false, features = ["prost"] }