[package]
name = "client-test"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", default-features = false, features = ["serde-serialize"] }
tonic = { version = "0.6.2", default-features = false, features = ["codegen", "prost"] }
webtonic-client = { path = "../webtonic-client" }
prost = "0.9.0"
wasm-bindgen-test = { version = "0.3.29", default-features = false }

[build-dependencies]
tonic-build = { version = "0.6.2", default-features = false, features = ["prost"] }
