[package]
name = "server-test"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
tonic = { version = "0.3.1" }
futures = { version = "0.3.8" }
prost = "0.6.1"
pretty_env_logger = "0.4.0"

webtonic-server = { path = "../webtonic-server" }

[build-dependencies]
tonic-build = { version = "0.3.1", features = ["prost"] }