[package]
name = "server-test"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
tonic = { version = "0.4.1" }
futures = { version = "0.3.13" }
prost = "0.7.0"
pretty_env_logger = "0.4.0"

webtonic-server = { path = "../webtonic-server" }

[build-dependencies]
tonic-build = { version = "0.4.1", features = ["prost"] }