[package]
name = "server-test"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.6.2"
futures = "0.3.21"
prost = "0.9.0"
pretty_env_logger = "0.4.0"

webtonic-server = { path = "../webtonic-server" }

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost"] }
