[package]
name = "webtonic-client"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
webtonic-proto = { path = "../webtonic-proto" }
tonic = { version = "0.3.1", default-features = false }
prost = { version = "0.6.1", default-features = false }
tokio = { version = "0.2.23", default-features = false, features = ["sync"] }

http = { version = "0.2.1", default-features = false }
bytes = { version = "0.5.3", default-features = false }

wasm-bindgen = { version = "0.2.69", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.19", default-features = false }
futures = { version = "0.3.8", default-features = false, features = ["alloc"] }
js-sys = { version = "0.3.46", default-features = false }

[dependencies.web-sys]
version = "0.3.46"
default-features = false
features = [
    "BinaryType",
    "console",
    "ErrorEvent",
    "WebSocket",
]

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.19", default-features = false }