[package]
name = "webtonic-client"
version = "0.1.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Brwoser enables websocket tunneling for gRPC (client)"
repository = "https://github.com/Sawchord/webtonic/"
readme = "../README.md"

[dependencies]
webtonic-proto = { version = "0.1.0", path = "../webtonic-proto" }
tonic = { version = "0.3.1", default-features = false }
prost = { version = "0.6.1", default-features = false }
tokio = { version = "0.3.6", default-features = false, features = ["sync"] }

http = { version = "0.2.1", default-features = false }
bytes = { version = "0.5.3", default-features = false }

wasm-bindgen = { version = "0.2.69", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.19", default-features = false }
futures = { version = "0.3.8", default-features = false, features = ["alloc"] }
js-sys = { version = "0.3.46", default-features = false }

[dependencies.web-sys]
version = "0.3.46"
default-features = false
features = [
    "BinaryType",
    "console",
    "ErrorEvent",
    "WebSocket",
]