[package]
name = "webtonic-client"
version = "0.1.1"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Browser enabled websocket tunneling for gRPC (client)"
repository = "https://github.com/Sawchord/webtonic/"
readme = "../README.md"

[dependencies]
webtonic-proto = { version = "0.1.1", path = "../webtonic-proto" }
tonic = { version = "0.6.2", default-features = false }
prost = { version = "0.9.0", default-features = false }
tokio = { version = "1.17.0", default-features = false, features = ["sync"] }

http = { version = "0.2.6", default-features = false }
bytes = { version = "1.1.0", default-features = false }

wasm-bindgen = { version = "0.2.79", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.29", default-features = false }
futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
js-sys = { version = "0.3.56", default-features = false }

[dependencies.web-sys]
version = "0.3.56"
default-features = false
features = [
    "BinaryType",
    "console",
    "ErrorEvent",
    "WebSocket",
]
