[package]
name = "webtonic-proto"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
http = { version = "0.2.1", default-features = false }
http-body = { version = "0.3.1", default-features = false }
prost = { version = "0.6.1", default-features = false, features = ["prost-derive"] }
bytes = { version = "0.5.3", default-features = false }
tonic = { version = "0.3.1", default-features = false }
log = "0.4.11"