[package]
name = "webtonic-proto"
version = "0.1.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Brwoser enables websocket tunneling for gRPC (protocol)"
repository = "https://github.com/Sawchord/webtonic/"
readme = "../README.md"

[dependencies]
http = { version = "0.2.3", default-features = false }
http-body = { version = "0.4.1", default-features = false }
prost = { version = "0.7.0", default-features = false, features = ["prost-derive"] }
bytes = { version = "1.0.1", default-features = false }
tonic = { version = "0.4.1", default-features = false }