[package]
name = "webtonic-server"
version = "0.1.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Brwoser enables websocket tunneling for gRPC (server)"
repository = "https://github.com/Sawchord/webtonic/"
readme = "../README.md"

[dependencies]
webtonic-proto = { version = "0.1.0",path = "../webtonic-proto" }
futures = { version = "0.3.6", default-features = false, features = ["alloc"] }
tokio = { version = "1.4.0", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1.5", default-features = false }

warp = { version = "0.3.1", default-features = false, features = ["websocket"] }
tower-service = { version = "0.3.1", default-features = false }
tonic = { version = "0.4.1", default-features = false, features = ["transport", "codegen"] }
prost = { version = "0.7.0", default-features = false, features = ["prost-derive"] }

bytes = { version = "1.0.1", default-features = false }
http = { version = "0.2.1", default-features = false }

log = "0.4.11"

# TODO: Add tls support
# TODO: Add compression?