[package]
name = "test-client"
version = "0.0.0"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"

[dependencies]
webtonic = { path = "../" }
tonic = { version = "0.3.1", default-features = false, features = ["codegen", "prost"] }
wasm-bindgen-test = { version = "0.3.18", default-features = false }
prost = "0.6.1"

[build-dependencies]
tonic-build = { version = "0.3.1", default-features = false, features = ["prost"] }